[package]
name = "reth-console"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
eyre = "0.6.12"
http = "1.3.1"
libc = "0.2.177"
jsonrpsee = { version = "0.26.0", features = ["http-client", "ws-client"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive", "std", "alloc"] }
serde_json = "1.0.145"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }

[dev-dependencies]
assert_cmd = "2.0.16"
jsonrpsee = { version = "0.26.0", features = ["server"] }
predicates = "3.1.3"
tempfile = "3.15.0"
